added instructions (and code) to reliably reproduce the issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
 project(nvglxfix)
 
-find_package(X11 REQUIRED xcb xcb_sync)
-
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_EXTENSIONS OFF)
 
+find_package(X11 REQUIRED xcb xcb_sync)
 add_library(nvglxfix SHARED main.c)
+target_link_libraries(nvglxfix PRIVATE X11::xcb X11::xcb_sync)
 
-target_link_libraries(nvglxfix X11::xcb X11::xcb_sync)
+find_package(Threads REQUIRED)
+add_executable(xspam xspam.c)
+target_link_libraries(xspam PRIVATE X11::xcb Threads::Threads)
